<resources>
    <string name="app_name">sliceMobileApp4</string>
    <string name="title_activity_pizza">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeMessage">Welcome to Slice Pizzeria</string>
    <string name="pizzas">Pizzas</string>
    <string name="sides">Sides</string>
    <string name="slices">Slices</string>
    <string name="sweets">Sweets</string>
    <string name="calzones_stromboli">Calzones/Stromboli</string>
    <string name="pasta">Pasta</string>
    <string name="salads">Salads</string>
    <string name="todo">TODO</string>
    <string name="cheese_pizza">Cheese Pizza</string>
    <string name="b_b_g_pizza">B.B.G. Pizza</string>
    <string name="white_pizza_description">Our ricotta blend with mozzarella, Parmesan, and basil</string>
    <string name="white_pizza">White Pizza</string>
    <string name="fresh_pizza_description">Our garlic oil base with fresh mozzarella, tomatoes, basil, and a dash of crushed red pepper</string>
    <string name="bbg_pizza_description">Our white pizza base with Nieman Ranch bacon, roasted garlic, and fresh basil</string>
    <string name="meatlover_pizza">Meatlover Pizza</string>
    <string name="d_luxe_pizza_description">Our red pizza sauce with pepperoni, Italian sausage, crushed meatballs, onions, green bell peppers, mushrooms, and Kalamata olives</string>
    <string name="d_luxe_pizza">D-Luxe Pizza</string>
    <string name="the_fresh">The Fresh</string>
    <string name="cheese_pizza_description">Roasted tomato herb pizza sauce, mozzarella cheese, Parmesan</string>
    <string name="meatlover_pizza_description">Our red pizza sauce with pepperoni, Nieman Ranch bacon, crushed meatballs, and Chisesi ham</string>
    <string name="veggie_pizza_description">Our red pizza sauce with roasted cremini mushrooms, green bell peppers, onions, tomatoes, minced garlic, and Kalamata olives</string>
    <string name="bbq_chicken_pizza_description">Our tangy BBQ pizza sauce with chicken, caramelized onions, Nieman Ranch bacon, fresh mozzarella, and parsley</string>
    <string name="four_cheese_margherita_pizza">Four Cheese Margherita Pizza</string>
    <string name="four_cheese_margherita_pizza_description">Our red pizza sauce with fresh and shredded mozzarella, Provolone, Parmesan, tomato, and basil</string>
    <string name="bbq_chicken_pizza">BBQ Chicken Pizza</string>
    <string name="flying_hawaiian_pizza">Flying Hawaiian Pizza</string>
    <string name="flying_hawaiian_pizza_description">Our red pizza sauce with chicken, ham, green bell peppers, pineapple, jalapenos, and Nieman Ranch bacon</string>
    <string name="wicked_garden_pizza">Wicked Garden Pizza</string>
    <string name="wicked_garden_pizza_description">Our white pizza with spinach, sun-dried tomatoes, caramelized onions, and roasted garlic</string>
    <string name="crush_pizza">The Crush Pizza</string>
    <string name="crush_pizza_description">Our red pizza sauce with crushed meatballs, minced garlic, and extra sauce</string>
    <string name="pga_pizza">PGA Pizza</string>
    <string name="pga_pizza_description">Our red pizza sauce with creamy Gorgonzola, Prosciutto, and arugula</string>
    <string name="addcheesepizza">addCheesePizza</string>
    <string name="addmeatloverspizza">addMeatLoversPizza</string>
    <string name="adddluxepizza">addDLuxePizza</string>
    <string name="addbbgpizza">addBBGPizza</string>
    <string name="addwhitepizza">addWhitePizza</string>
    <string name="addfreshpizza">addFreshPizza</string>
    <string name="veggie_pizza">Veggie Pizza</string>
    <string name="addveggiepizza">addVeggiePizza</string>
    <string name="addfourcheesemargheritapizza">addFourCheeseMargheritaPizza</string>
    <string name="addbbqchickenpizza">addBBQChickenPizza</string>
    <string name="addflyinghawaiianpizza">addFlyingHawaiianPizza</string>
    <string name="addwickedgardenpizza">addWickedGardenPizza</string>
    <string name="addcrushpizza">addCrushPizza</string>
    <string name="addpgapizza">addPGAPizza</string>
    <string name="house_salad">House Salad</string>
    <string name="house_salad_description">Lettuce, mushrooms, onions, green bell peppers, olives, tomatoes, and mozzarella.  Paired with Italian dressing</string>
    <string name="caesar_salad">Caesar Salad</string>
    <string name="caesar_salad_description">Lettuce, garlic croutons, and Pecorino.  Paired with Caesar dressing</string>
    <string name="greek_salad">Greek Salad</string>
    <string name="greek_salad_description">Lettuce, artichoke hearts, cucumbers, onions, tomatoes, Feta, and Kalamata olives.  Paired with creamy Greek dressing.</string>
    <string name="mesclun_salad">Mesclun Salad</string>
    <string name="mesclun_salad_description">Mixed field greens, goat cheese, pecans, and seasonal berries.  Paired with Balsamic vinaigrette.</string>
    <string name="arugula_salad">Arugula Salad</string>
    <string name="arugula_salad_description">Arugula, tomatoes, lemon, and Pecorino.  Paired with Honey Lemon Vinaigrette.</string>
    <string name="chef_salad">Chef Salad</string>
    <string name="chef_salad_description">Lettuce, Cucumber, tomato, garlic croutons, herb-roasted chicken, Nieman Ranch bacon, and Chisesi ham.  Paired with housemade Ranch.</string>
    <string name="spaghetti">Spaghetti and Meatballs</string>
    <string name="spaghetti_description">House-made meatballs (6) in a marinara sauce over linguine pasta.</string>
    <string name="mac_and_cheese">Mac and Cheese</string>
    <string name="mac_and_cheese_description">A creamy blend of cheeses mixed with macaroni noodles.</string>
    <string name="lasagna">Lasagna</string>
    <string name="lasagna_description">Our house-made meatballs, crushed, and sausage layered with rich cheese, pasta, and marinara.</string>
    <string name="meatloaf">Smoked Meatloaf</string>
    <string name="meatloaf_description">A delicious blend of smoked meatloaf, consisting of beef, pork, and veal, with a spicy red sauce, served over our creamy mac and cheese.</string>
    <string name="bbq_shrimp">BBQ Shrimp</string>
    <string name="bbq_shrimp_description">Our award-winning BBQ sauce, served with gulf shrimp (6), over linguine noodles.</string>
    <string name="cheese_calzone">Cheese Calzone</string>
    <string name="cheese_calzone_description">Combination of ricotta and mozzarella.  Served with tomato gravy.</string>
    <string name="spinach_calzone">Spinach Calzone</string>
    <string name="spinach_calzone_description">Combination of ricotta, mozzarella, minced garlic, and spinach. Served with tomato gravy.</string>
    <string name="trucker_calzone">The Trucker Calzone</string>
    <string name="trucker_calzone_description">Combination of pepperoni, sausage, Chisesi ham, and Nieman Ranch bacon with ricotta and mozzarella.  Served with tomato gravy.</string>
    <string name="wicked_garden_calzone">Wicked Garden Calzone</string>
    <string name="wicked_garden_calzone_description">Combination of spinach, sun-dried tomato, caramelized onions, roasted garlic, ricotta, and mozzarella.  Served with tomato gravy.</string>
    <string name="meatball_stromboli">Meatball Stromboli</string>
    <string name="meatball_stromboli_description">Combination of meatballs, tomato gravy, and mozzarella.  Served with tomato gravy.</string>
    <string name="cheesy_garlic_bread">Cheesy Garlic Bread</string>
    <string name="cheesy_garlic_bread_description">Blend of cheese on french bread loaf.  Served with tomato gravy.</string>
    <string name="meatballs">Meatballs</string>
    <string name="meatballs_description">Six of our 2-bite house meatballs.  Served with toasted garlic bread.  Upgrade to cheesy garlic bread +$2</string>
    <string name="spinach_artichoke_dip">Spinach Artichoke Dip</string>
    <string name="spinach_artichoke_dip_description">Made from scratch with 5 cheeses, spinach, artichokes, and love. Served with toasted garlic bread.</string>
    <string name="bread_pudding">Seasonal Bread Pudding</string>
    <string name="bread_pudding_description">Our award-winning bread pudding made with seasonal ingredients.</string>
    <string name="cookie">Cookie</string>
    <string name="cookie_description">Our delicious house-made chocolate chip cookies.</string>
    <string name="brownie">Brownie</string>
    <string name="brownie_description">Our delicious and chewy brownie.</string>
    <string name="brookie">Brookie</string>
    <string name="brookie_description">A chocolate chip cookie baked in a brownie.</string>
    <string name="slice_logo">Slice Logo</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="title_activity_pasta">pasta</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">pizza button clicked!</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_calzone">calzone</string>
    <string name="title_activity_salads">salads</string>
    <string name="title_activity_sides">sides</string>
    <string name="title_activity_sweets">sweets</string>
    <string name="title_activity_slices">slices</string>
    <string name="title_activity_customize_item">customize_item</string>
    <string name="special_instructions_here">Allergies or special instructions here</string>
    <string name="title_activity_customize_salad">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>