<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorPrimary"
    tools:context=".salads"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        >

        <include layout="@layout/toolbar"/>

        <TextView
        android:id="@+id/house_salad"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:text="@string/house_salad"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/house_salad_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/addHouseSalad"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="5dp"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toTopOf="@+id/house_salad_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/house_salad"/>

        <TextView
            android:id="@+id/house_salad_description"
            android:layout_width="350dp"
            android:layout_height="75dp"
            android:layout_marginStart="16dp"
            android:text="@string/house_salad_description"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/caesar_salad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/house_salad" />

    <TextView
        android:id="@+id/caesar_salad"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/caesar_salad"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/caesar_salad_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/house_salad_description" />

    <ImageButton
        android:id="@+id/addCaesarSalad"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="5dp"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toTopOf="@+id/caesar_salad_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/caesar_salad"/>

    <TextView
        android:id="@+id/caesar_salad_description"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:text="@string/caesar_salad_description"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caesar_salad"
        app:layout_constraintBottom_toTopOf="@id/greek_salad"
        />

    <TextView
        android:id="@+id/greek_salad"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/greek_salad"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/greek_salad_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/caesar_salad_description" />

    <ImageButton
        android:id="@+id/addGreekSalad"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="5dp"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toTopOf="@+id/greek_salad_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/greek_salad"/>

    <TextView
        android:id="@+id/greek_salad_description"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:text="@string/greek_salad_description"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greek_salad"
        app:layout_constraintBottom_toTopOf="@id/mesclun_salad"
        />

    <TextView
        android:id="@+id/mesclun_salad"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/mesclun_salad"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/mesclun_salad_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greek_salad_description" />

    <ImageButton
        android:id="@+id/addMesclunSalad"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="5dp"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toTopOf="@+id/mesclun_salad_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mesclun_salad"/>

    <TextView
        android:id="@+id/mesclun_salad_description"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:text="@string/mesclun_salad_description"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mesclun_salad"
        app:layout_constraintBottom_toTopOf="@id/arugula_salad"
        />

    <TextView
        android:id="@+id/arugula_salad"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/arugula_salad"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/arugula_salad_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mesclun_salad_description" />

    <ImageButton
        android:id="@+id/addArugulaSalad"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="5dp"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toTopOf="@+id/arugula_salad_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/arugula_salad"/>

    <TextView
        android:id="@+id/arugula_salad_description"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:text="@string/arugula_salad_description"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arugula_salad"
        app:layout_constraintBottom_toTopOf="@id/chef_salad"
        />

    <TextView
        android:id="@+id/chef_salad"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/chef_salad"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/chef_salad_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arugula_salad_description" />

    <ImageButton
        android:id="@+id/addChefSalad"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="5dp"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toTopOf="@+id/chef_salad_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chef_salad"/>

        <TextView
            android:id="@+id/chef_salad_description"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="50dp"
            android:text="@string/chef_salad_description"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chef_salad" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>